--- a/btc/test.html
+++ b/btc/test.html
@@ -282,6 +282,9 @@
         #insightModal .modal-buttons button#updateInsightButton {
             background-color: #5a5a7a; /* A different color for the update button */
         }
+        #insightModal .modal-buttons button#playInsightButton {
+            background-color: #4CAF50; /* Green, similar to save */
+        }
 
 
         /* Color Indicators */
@@ -409,6 +412,7 @@
             </div>
             <div id="insightContent" class="insight-content">Loading insight...</div>
             <div class="modal-buttons">
+                <button id="playInsightButton" style="display: none;">Play</button>
                 <button id="updateInsightButton" style="display: none;">Update Report</button>
                 <button id="closeInsightButton">Close</button>
             </div>
@@ -455,6 +459,7 @@
         const insightContentEl = document.getElementById('insightContent');
         const insightTimestampEl = document.getElementById('insightTimestamp'); 
         const updateInsightButtonEl = document.getElementById('updateInsightButton');
+        const playInsightButtonEl = document.getElementById('playInsightButton');
 
         const DEFAULT_ACCENT_COLOR = '#f7931a';
         let lastDataFetchTimestamp = null;
@@ -470,6 +475,7 @@
                 content: null,
                 timestamp: null
             }
+            // insightAudioPlayer: null // Will be initialized later
         };
 
         function loadConfig() {
@@ -673,24 +679,29 @@
         function updateInsightModalDisplay() {
             const timestampEl = document.getElementById('insightTimestamp');
             // updateInsightButtonEl is now a global const
+            // playInsightButtonEl is now a global const
             console.log('[DEBUG] updateInsightModalDisplay called. Current insightReport:', JSON.parse(JSON.stringify(config.insightReport)));
 
             if (config.insightReport && config.insightReport.content && config.insightReport.timestamp) {
                 console.log('[DEBUG] Displaying cached insight report.');
                 insightContentEl.textContent = config.insightReport.content;
                 if(insightTimestampEl) {insightTimestampEl.textContent = formatInsightTimestamp(config.insightReport.timestamp); insightTimestampEl.style.display = 'block';}
+                if(playInsightButtonEl) playInsightButtonEl.style.display = 'inline-block'; // Show Play button
 
                 const oneHourInMs = 60 * 60 * 1000;
                 if(updateInsightButtonEl) updateInsightButtonEl.style.display = (Date.now() - config.insightReport.timestamp) >= oneHourInMs ? 'inline-block' : 'none';
                 console.log('[DEBUG] Update button display:', updateInsightButtonEl ? updateInsightButtonEl.style.display : 'N/A (element not found)');
+                console.log('[DEBUG] Play button display:', playInsightButtonEl ? playInsightButtonEl.style.display : 'N/A (element not found)');
             } else {
                 console.log('[DEBUG] No valid cached insight report found. Triggering new fetch.');
                 insightContentEl.textContent = "No previous insight found. Fetching new report...";
                 if(insightTimestampEl) insightTimestampEl.style.display = 'none';
                 if(updateInsightButtonEl) updateInsightButtonEl.style.display = 'none';
+                if(playInsightButtonEl) playInsightButtonEl.style.display = 'none'; // Hide Play button
                 fetchInsightFromGemini(); // Fetch a new one immediately if no valid stored report
             }
         }
+
 
 
         async function fetchInsightFromGemini() {
@@ -702,6 +713,7 @@
             console.log('[DEBUG] fetchInsightFromGemini called.');
             toggleInsightModal(true);
             if(updateInsightButtonEl) updateInsightButtonEl.style.display = 'none'; // Hide update button while fetching
+            if(playInsightButtonEl) playInsightButtonEl.style.display = 'none'; // Hide play button while fetching
             if(insightTimestampEl) insightTimestampEl.style.display = 'none'; // Hide old timestamp while fetching
             insightContentEl.textContent = "Fetching AI insight, please wait...";
             console.log('[DEBUG] Set UI to loading state for insight.');
@@ -710,9 +722,9 @@
             // Using gemini-2.5-flash as a robust choice for a recent Flash model.
             // Verify with ListModels if a more specific identifier like "gemini-1.5-flash-preview-0520" is needed and available.
             const modelName = "gemini-2.5-flash-preview-05-20"; 
-            const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateContent?key=${config.googleApiKey}`;            const prompt = "What is happening in Bitcoin today, Cover main headlines, with summaries. Length 500 words or less";
+            const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateSpeech?key=${config.googleApiKey}`;            const prompt = "What is happening in Bitcoin today, Cover main headlines, with summaries. Length 500 words or less";
 
-            console.log(`[DEBUG] Attempting to fetch insight. Model: ${modelName}, API Key used: ${config.googleApiKey ? 'Yes' : 'No'}`);
+            console.log(`[DEBUG] Attempting to fetch insight. Model for content: ${modelName}, API Key used: ${config.googleApiKey ? 'Yes' : 'No'}`);
             console.log(`[DEBUG] Prompt: "${prompt}"`);
 
             try {
@@ -725,7 +737,7 @@
                         contents: [{ parts: [{ text: prompt }] }],
                         tools: [
                             {
-                                "googleSearch": {} // Corrected tool name
+                                "googleSearchRetrieval": {} 
                             }
                         ]
                     }),
@@ -767,6 +779,93 @@
             console.log('[DEBUG] handleInsightsButtonClick called.');
             toggleInsightModal(true);
             updateInsightModalDisplay(); // This function will decide whether to show old data or fetch new
+        }
+
+        let currentInsightAudio = null; // To manage the audio object
+
+        async function playInsightAudio() {
+            if (!config.googleApiKey) {
+                alert("Google API Key is not configured. Please set it up in Config.");
+                return;
+            }
+            if (!config.insightReport || !config.insightReport.content) {
+                alert("No insight content available to play.");
+                return;
+            }
+
+            if (currentInsightAudio && !currentInsightAudio.paused) {
+                currentInsightAudio.pause();
+                currentInsightAudio.currentTime = 0;
+                if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
+                if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                return; // Act as a stop button if already playing
+            }
+
+            const insightText = config.insightReport.content;
+            const ttsPrompt = `Read aloud as a seasoned newscaster: ${insightText}`;
+            // Note: The model "gemini-2.5-flash-preview-tts" was specified. 
+            // For synthesizeSpeech, a common compatible model is "gemini-1.5-flash-001".
+            // Ensure the chosen model supports synthesizeSpeech.
+            // Reverting to gemini-1.5-flash-001 as it's a known specific version.
+            // Using the model and endpoint structure from the user's Python example.
+            const TTS_MODEL_NAME = "gemini-2.5-flash-preview-tts";
+            const TTS_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${TTS_MODEL_NAME}:generateContent?key=${config.googleApiKey}`;
+
+            if(playInsightButtonEl) playInsightButtonEl.textContent = "Buffering..."; // Changed from "Loading Audio..."
+            if(playInsightButtonEl) playInsightButtonEl.disabled = true;
+            console.log(`[DEBUG] Attempting to fetch TTS audio. TTS Model: ${TTS_MODEL_NAME}, API URL: ${TTS_API_URL}`);
+
+            const requestBody = {
+                contents: [{ parts: [{ text: ttsPrompt }] }],
+                generationConfig: {
+                    responseMimeType: "audio/mp3", // Requesting MP3 output
+                    // speechConfig is structured based on typical Gemini API patterns for such configurations
+                    // when passed within generationConfig or similar.
+                    // The Python SDK might abstract this slightly.
+                    // We are mirroring the intent of the Python example's speech_config.
+                    speechConfig: { // This structure is an educated guess based on typical API patterns
+                        voiceConfig: {
+                            prebuiltVoiceConfig: { voiceName: "Kore" } // Using user's preferred voice
+                        }
+                    }
+                }
+            };
+            console.log('[DEBUG] TTS Request Body:', JSON.stringify(requestBody, null, 2));
+
+            try {
+                const response = await fetch(TTS_API_URL, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(requestBody)
+                });
+
+                if (!response.ok) {
+                    console.error(`[DEBUG] TTS API response not OK. Status: ${response.status} ${response.statusText}`);
+                    const errorData = await response.json().catch(() => ({ error: { message: "Unknown server error or non-JSON response."} }));
+                    throw new Error(errorData?.error?.message || `TTS API Error: ${response.status}`);
+                }
+
+                const data = await response.json();
+                console.log('[DEBUG] TTS API response OK. Raw data:', data);
+                // Extract audio data from the generateContent response structure
+                const audioPart = data.candidates?.[0]?.content?.parts?.find(part => part.inlineData && part.inlineData.mimeType.startsWith('audio/'));
+                if (audioPart && audioPart.inlineData.data) {
+                    const audioMimeType = audioPart.inlineData.mimeType;
+                    currentInsightAudio = new Audio(`data:${audioMimeType};base64,${audioPart.inlineData.data}`);
+                    currentInsightAudio.play();
+                    if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop"; // Now acts as a stop button
+                    if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                    currentInsightAudio.onended = () => {
+                        if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
+                        if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                    };
+                } else { throw new Error("No audio content received from TTS API."); }
+            } catch (error) {
+                console.error("Error playing insight audio:", error);
+                alert(`Error generating audio: ${error.message}`);
+                if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
+                if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+            }
         }
 
         async function fetchData() {
@@ -980,6 +1079,11 @@
         if (updateInsightButtonEl) {
             updateInsightButtonEl.addEventListener('click', fetchInsightFromGemini); // Update button calls fetch directly
         }
+        if (playInsightButtonEl) {
+            playInsightButtonEl.addEventListener('click', playInsightAudio);
+        }
+
+
 
         function drawPriceChart(history, timeframe, allTimeHighUSD, accentColor) {
             if (!priceChartCanvas) return;
