--- a/btc/index.html
+++ b/btc/index.html
@@ -316,7 +316,7 @@
     <div class="container">
         <header>
             <div class="header-title-group">
-                <img src="./icons/512x512.png" alt="BTC Track Logo" id="headerLogo">
+                <img src="./icons/512.png" alt="BTC Track Logo" id="headerLogo">
                 <h1>BTC Track</h1>
             </div>
             <div class="action-buttons">
