--- a/btc/test/index.html
+++ b/btc/test/index.html
@@ -810,12 +810,11 @@
             const requestBody = {
                 contents: [{ parts: [{ text: ttsPrompt }] }],
                 generationConfig: {
-                    responseMimeType: "application/json", // Specify that we expect a JSON response
+                    responseMimeType: "audio/mpeg", // Explicitly request raw audio output
                     speechConfig: { // speechConfig object
                         voiceConfig: {
                             prebuiltVoiceConfig: { voiceName: "Kore" } 
                         }
-                        // "audioEncoding" is removed as it's not a valid field here per the error
                     }
                 }
             };
@@ -834,26 +833,28 @@
                     throw new Error(`TTS API Error: ${response.status} ${response.statusText}. Check console for details.`);
                 }
 
-                const data = await response.json();
-                console.log('[DEBUG] TTS API response OK. Raw data:', data);
-                const audioPart = data.candidates?.[0]?.content?.parts?.find(part => part.inlineData && part.inlineData.mimeType?.startsWith('audio/'));
-                if (audioPart && audioPart.inlineData.data) {
-                    const audioMimeType = audioPart.inlineData.mimeType;
-                    currentInsightAudio = new Audio(`data:${audioMimeType};base64,${audioPart.inlineData.data}`);
+                // If responseMimeType: "audio/mpeg" is successful, the response body is the audio data directly.
+                const audioBlob = await response.blob();
+                console.log('[DEBUG] TTS API response OK. Received blob type:', audioBlob.type, 'size:', audioBlob.size);
+
+                if (audioBlob && audioBlob.size > 0 && audioBlob.type.startsWith('audio/')) {
+                    const audioUrl = URL.createObjectURL(audioBlob);
+                    currentInsightAudio = new Audio(audioUrl);
                     currentInsightAudio.play();
                     if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop";
                     if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                    
                     currentInsightAudio.onended = () => {
                         if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
                         if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                        URL.revokeObjectURL(audioUrl); // Clean up the object URL
                     };
                 } else { 
-                    console.error("[DEBUG] No audio content found in expected part of the response:", data);
-                    throw new Error("No audio content received from TTS API."); 
+                    console.error("[DEBUG] TTS API did not return a valid audio blob. Received:", audioBlob);
+                    throw new Error("TTS API did not return valid audio data."); 
                 }
             } catch (error) {
                 console.error("Error playing insight audio:", error);
-                alert(`Error generating audio: ${error.message}`);
                 if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
                 if(playInsightButtonEl) playInsightButtonEl.disabled = false;
             }
